<resources>

    <string name="app_name">WiFi P2P</string>
    
    <string name="text_view">Message History</string>
    <string name="text_view01">No.</string>
    <string name="text_view02">Message</string>
    <string name="edit_message">Tap to enter message</string>
    <string name="button_send">Send</string>
    <string name="cb_go">O</string>
    <string name="cb_ct1">1</string>
    <string name="cb_ct2">2</string>
    <string name="cb_ct3">3</string>
    <string name="cb_ct4">4</string>
    <string name="cb_ct5">5</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">WiFi P2P</string>

</resources>